# node-null-control

./: .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .vercelignore  CONTRIBUTING.md  DEPLOYMENT_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  VERCEL_SETUP_SUMMARY.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/: CODEOWNERS
analytics/: schema.md  tracker_youtube_extension.md
api/: identity.js
artifacts/: manifest.schema.json
automation/: email_automation.md  metrics_pull.md  service_wiring.md  wiring.md
docs/: 00_mental_model.md  01_rules.md  02_workflow.md  OPERATIONS.md  QUICKSTART.md  VERCEL_DEPLOYMENT.md  displacement_atlas_github_issues.md  platform_decisions.md
docs/core/: README.md  (+2 more)
forge/: README.md  app.js  config.js  index.html  styles.css
monetization/: architecture.md  product_engine.md
ops/: forbidden_phrases.txt  pip_audit_ignore.txt
scripts/: aggregate_weekly_inputs.py  build_attention_mechanics_report.py  build_content_template_pack.py  build_displacement_atlas.py  build_displacement_atlas.py.backup  build_hook_performance_index.py  build_pattern_engine_report.py  build_signal_dashboard.py  build_vertical_performance_index.py  build_weekly_signal_brief.py  bundle_forge.sh  package_free_sampler.py  package_gumroad_products.py  package_weekly_signal_brief_kit.py  precommit_pii_scan.py  product_build_utils.py  release_products.py  scan_forbidden_phrases.py  smoke_products.py  validate_schemas.py
tests/: test_displacement_atlas_build.py  test_schema_validation.py  test_vercel_deployment.py
(+213 files in other folders)
