[project]
name = "node-null-control"
version = "0.1.0"
description = "Anonymous attention-harvesting network control plane: templates, automation, analytics, and decision systems"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11,<3.14"

# Core dependencies for scripts
dependencies = [
    "jsonschema>=4.23.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "black>=24.10.0,<25.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []

# Python 3.13 compatibility notes:
# - jsonschema 4.23.0 is compatible with Python 3.13
# - All stdlib imports used (csv, json, math, datetime, pathlib, statistics, argparse)
#   are part of the standard library and do not require compatibility checks
#
# The scripts in this repository are designed to be dependency-minimal:
# - aggregate_weekly_inputs.py: stdlib only
# - build_weekly_signal_brief.py: jsonschema only
# - package_weekly_signal_brief_kit.py: stdlib only

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "products/**/runs/**/outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.black]
line-length = 120
target-version = ["py311"]
